# workshop_prog_s1

./: .gitignore  CMakeLists.txt  README.md
lib/: random.cpp  random.hpp
src/: README.md  jolidoc.md  main.cpp
